force-app/main/default/objects/Guest__c/fields/Identity_Type__c.field-meta.xml
<CustomField>
    <fullName>Identity_Type__c</fullName>
    <label>Identity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Passport Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>