force-app/main/default/objects/Guest__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alberta.</fullName>
            </value>
            <value>
                <fullName>British Columbia.</fullName>
            </value>
            <value>
                <fullName>Manitoba.</fullName>
            </value>
            <value>
                <fullName>New Brunswick.</fullName>
            </value>
            <value>
                <fullName>Newfoundland and Labrador.</fullName>
            </value>
            <value>
                <fullName>Northwest Territories.</fullName>
            </value>
            <value>
                <fullName>Nova Scotia.</fullName>
            </value>
            <value>
                <fullName>Nunavut.</fullName>
            </value>
            <value>
                <fullName>Ontario</fullName>
            </value>
            <value>
                <fullName>Prince Edward Island</fullName>
            </value>
            <value>
                <fullName>Quebec</fullName>
            </value>
            <value>
                <fullName>Saskatchewan</fullName>
            </value>
            <value>
                <fullName>Yukon</fullName>
            </value>
            <value>
                <fullName>Kent</fullName>
            </value>
            <value>
                <fullName>Surrey</fullName>
            </value>
            <value>
                <fullName>Essex</fullName>
            </value>
            <value>
                <fullName>Fife</fullName>
            </value>
            <value>
                <fullName>Lanarkshire</fullName>
            </value>
            <value>
                <fullName>Highland</fullName>
            </value>
            <value>
                <fullName>Glamorgan</fullName>
            </value>
            <value>
                <fullName>Powys</fullName>
            </value>
            <value>
                <fullName>Gwynedd</fullName>
            </value>
            <value>
                <fullName>Antrim</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Armagh</fullName>
            </value>
            <value>
                <fullName>İstanbul</fullName>
            </value>
            <value>
                <fullName>Ankara</fullName>
            </value>
            <value>
                <fullName>İzmir</fullName>
            </value>
            <value>
                <fullName>Antalya</fullName>
            </value>
            <value>
                <fullName>Bursa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>