force-app/main/default/objects/Guest__c/fields/Street_Text__c.field-meta.xml
<CustomField>
    <fullName>Street_Text__c</fullName>
    <label>Street Text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>