force-app/main/default/objects/Guest__c/fields/The_Number_of_the_Reservations__c.field-meta.xml
<CustomField>
    <fullName>The_Number_of_the_Reservations__c</fullName>
    <label>The Number of the Reservations</label>
    <summaryForeignKey>Opp_Guest_Intermediate__c.Guest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>